2001-04-20  Bill Schelter  <wfs@sonia.ma.utexas.edu>

	* Now clisp and gcl work ok on all tests No errors found,
	and apparently cmulisp does too.

2001-04-18  Bill Schelter  <wfs@sonia.ma.utexas.edu>

	* trying to correct all the remaining bugs for clisp.
	there is still one lurking, but have eliminated 7 more in
	trprop.lisp, rat3e.lisp,	mstuff.lisp
	* fixed the source level debugging code and debugger code
	for both clisp and gcl versions.  

	* Multiple changes to make maxima under cmulisp perform all the
	tests.
	* changes to plot.lisp to remove gcl dependencies.
	* move some system specific stuff to the compile-{clisp,cmulisp}
	files.  

2001-04-15  Bill Schelter  <wfs@sonia.ma.utexas.edu>
	* added the file specfun.mc from Barton Willis, and the
	documentation to the manual under Orthogonal Polynomials,
	just after Special Functions.

	*  added the special declarations, to the maxima to lisp
	compiler, so that the correct dynamic binding scenario is
	respected.

	* changed the default optimize level for compilation
	of the maxima files to -O4, by changing this in GCL. 
	
	*  added changes to integrate to handle the irreducible
	denominators if given rational function f/g, using the
	rootsof method.   To enable that use INTEGRATE_USE_ROOTSOF:true;

2001-04-06  Bill Schelter  <wfs@sonia.ma.utexas.edu>

	* Fix the install to install all share/*.lisp
	* Fix auto-mexpr which had a bug, but only seen
	with 'trigrat'
	* Fix file_search to also look for .lisp in share/*
	* have the install on MS Windows add the .mc and .lisp files in
	share
	

2001-03-30  Raymond Toy <toy@rtp.ericsson.se>
	
	compile-cmulisp.lisp:
	o Add some text to explain how to build it.
	o Add support for maxima's describe.
	o Changed the name of the core file to maxima.core.
	
	macdes.lisp:
	o Add $describe for CMUCL.
	
	init_max1.lisp:
	o Changed SYSTEM:: to SI::
	o Set up file extensions appropriately for searching.
	o Update user::run to load up the foreign code so describe works.
	