@@ -43,7 +43,7 @@
 		(APPLY F L))
     #+cl
     ((and (symbolp f)(or (macro-function f)
-			 (special-form-p f)))
+			 (special-operator-p f)))
      (eval (cons f (copy-rest-arg l))))
     (T
      (MAPPLY F (copy-rest-arg  L) NIL))))
